home-page-error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <!-- <app-contact-form></app-contact-form> -->
 <!-- <app-about></app-about> -->
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<!-- <app-speciality-drop-down></app-speciality-drop-down> -->
+<router-outlet></router-outlet> 
+<app-footer></app-footer> 
