--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -7,8 +7,8 @@
       <div class="contact-info">
         <p><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20"><path fill="currentColor" d="m19.799 5.165l-2.375-1.83a2 2 0 0 0-.521-.237A2 2 0 0 0 16.336 3H9.5l.801 5h6.035c.164 0 .369-.037.566-.098s.387-.145.521-.236l2.375-1.832c.135-.091.202-.212.202-.334s-.067-.243-.201-.335M8.5 1h-1a.5.5 0 0 0-.5.5V5H3.664c-.166 0-.37.037-.567.099c-.198.06-.387.143-.521.236L.201 7.165C.066 7.256 0 7.378 0 7.5c0 .121.066.242.201.335l2.375 1.832c.134.091.323.175.521.235c.197.061.401.098.567.098H7v8.5a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-17a.5.5 0 0 0-.5-.5"/></svg> 50, 9th Cross Rd, K.R.Road, 7th Block, Jayanagar, Bengaluru, Karnataka 560070</p>
         <p><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="black" d="m20 8l-8 5l-8-5V6l8 5l8-5m0-2H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2"/></svg> mail&#64;akshahospital.in</p>
-        <p><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="black" d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l2.2-2.2c.28-.28.67-.36 1.02-.25c1.12.37 2.32.57 3.57.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 4a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.45.57 3.57c.11.35.03.74-.25 1.02z"/></svg> 080 2677 2555 / 2677 2878 | +91 72598 33311</p>
-        <p><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="M19 19V8H5v11zM16 1h2v2h1a2 2 0 0 1 2 2v14c0 1.11-.89 2-2 2H5a2 2 0 0 1-2-2V5c0-1.11.89-2 2-2h1V1h2v2h8zm-5 8.5h2v3h3v2h-3v3h-2v-3H8v-2h3z"/></svg> Book An Appointment</p>
+        <!-- <p><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="black" d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l2.2-2.2c.28-.28.67-.36 1.02-.25c1.12.37 2.32.57 3.57.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 4a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.45.57 3.57c.11.35.03.74-.25 1.02z"/></svg> 080 2677 2555 / 2677 2878 | +91 72598 33311</p>
+        <p><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="currentColor" d="M19 19V8H5v11zM16 1h2v2h1a2 2 0 0 1 2 2v14c0 1.11-.89 2-2 2H5a2 2 0 0 1-2-2V5c0-1.11.89-2 2-2h1V1h2v2h8zm-5 8.5h2v3h3v2h-3v3h-2v-3H8v-2h3z"/></svg> Book An Appointment</p> -->
       </div>
       <h3 class="heading">Social Media</h3>
       <div class="social-icons">
@@ -18,24 +18,20 @@
     </div>
   
     <div class="contact-right">
-     <img class="logo" src="../../assets/aksha-logo-white.png">
-      <h2 class="form-heading">Leading the Way in Patient Care – Get in Touch!</h2>
-      <form>
-        <input type="text" placeholder="Name *">
-        <input type="email" placeholder="Email Id *">
-        <input type="tel" placeholder="Phone Number *">
-        <input type="text" placeholder="Subject">
-        <textarea placeholder="Message" cols="50"></textarea>
-        <p class="privacy-policy">By submitting this form you accept the <a href="#">Privacy Policy</a>.</p>
-        <div class="component-39">
-            <div class="component-39-child">
-            </div>
-            <div class="component-39-item">
-            </div>
-            <div class="sent-message">Sent Message</div>
-            </div>
-            
-      </form>
+     <div>
+      Leading the Way in Patient Care – Get in Touch!
+     </div>
+     <div>
+      <div>
+        080 26772555 / 26772878 
+      </div>
+      <div>
+        +91 72598 33311
+      </div>
+     </div>
+     <div>
+      <button></button>
+     </div>
     </div>
   </div>
   
