--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -308,15 +308,26 @@
 .text-container {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 40%;
 }
 .image-container {
   display: flex;
   width: 50%;
+  justify-content: center;
+  align-items: center;
+  padding-left: 9rem;
+
+}
+.image-container-2{
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  padding-right: 9rem;
 }
 .left-image-1 {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
 }
 .text-content {
   flex: 1;
@@ -338,7 +349,7 @@
   font-family: Poppins;
   color: #000;
   text-align: left;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .item-icon {
@@ -448,12 +459,16 @@
   width: 70%;
 
 }
+.num-text-container-1{
+  width: 45%;
+}
 .departments-section {
   padding: 40px;
   background-color: #f0f8ff;
   text-align: center;
-  padding-left: 6rem;
+  padding-left: 9rem;
   padding-right: 3rem;
+
 }
 .section-heading {
   font-size: 36px;
@@ -560,7 +575,7 @@ text-align: justify;
   background: linear-gradient(90deg, #332876, #0f96b4);
   color: white;
   border: none;
-  padding: 20px 40px;
+  padding: 11px 40px;
   font-size: 16px;
   font-weight: 500;
   border-radius: 5px;
@@ -571,6 +586,7 @@ text-align: justify;
 position: relative;
 bottom: 105px;
 font-family: 'Open Sans';
+height: 50px;
 }
 .icon-carousel-container {
   display: flex;
@@ -604,6 +620,7 @@ font-family: 'Open Sans';
   height: 728px;
   /* padding: 30px; */
   overflow: hidden;
+  padding-top: 9rem;
 
 
 }
@@ -631,18 +648,29 @@ font-family: 'Open Sans';
   padding-left: 6rem;
   max-width: 50%;
 }
-/* Slide-up animation (for outgoing heading) */
-@keyframes slideUp {
+/* CSS Animation for Sliding the Active Image Left */
+@keyframes slideLeft {
   from {
+    transform: translateX(0);
     opacity: 1;
-    transform: translateY(0); /* Starts from its original position */
   }
   to {
+    transform: translateX(-10%);
     opacity: 0;
-    transform: translateY(-30px); /* Slides upwards */
   }
 }
 
+/* CSS Animation for Sliding the Next Image in from the Right */
+@keyframes slideInFromRight {
+  from {
+    transform: translateX(10%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
 /* Slide-down animation (for incoming heading) */
 @keyframes slideDown {
   from {
@@ -654,20 +682,6 @@ font-family: 'Open Sans';
     transform: translateY(0); /* Slides to normal position */
   }
 }
-
-
-/* Apply the animations when the class is dynamically added */
-.slide-left {
-  animation: slideLeft 1s ease-in-out;
-}
-
-.slide-in {
-  animation: slideIn 1s ease-in-out;
-}
-
-.fade-in {
-  animation: fadeIn 1s ease-in-out;
-}
 /* Apply animations when the class is dynamically added */
 .slide-up {
   animation: slideUp 0.6s ease-in-out;
@@ -675,6 +689,14 @@ font-family: 'Open Sans';
 
 .slide-down {
   animation: slideDown 0.6s ease-in-out;
+}
+/* Classes to Trigger the Animation */
+.slide-left {
+  animation: slideLeft 0.5s ease-in-out forwards;
+}
+
+.slide-in-right {
+  animation: slideInFromRight 0.5s ease-in-out forwards;
 }
 
 .caro-text-content {
@@ -715,7 +737,7 @@ font-size: 64px;
   text-align: left;
   font-size: 16px;
   color: #fff;
-  font-family: Inter;
+  font-family: "Open Sans";
   border: none;
 }
 
@@ -732,23 +754,29 @@ font-size: 64px;
   height: 380px;
   object-fit: cover;
   border-radius: 10px;
-  margin-bottom: 10px;
   transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+  
+/*  
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; */
 }
 
 .next-image {
   width: 340px;
-  height: 280px;
+  height: 287px;
   object-fit: cover;
   border-radius: 10px;
   transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
   opacity: 0.8;
   padding-left: 49px;
+ 
+  z-index: -1; /* Ensure it is behind until clicked */
+
+  border:none
 }
 
 .carousel-pagination {
   position: absolute;
-  bottom: 10px;
+  bottom: 45px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -838,8 +866,8 @@ padding-right: 4rem;
 }
 
 .department-list {
-  width: 250px;
-  max-height: 385px; /* Adjust this based on your need */
+  width: 350px;
+  max-height: 420px; /* Adjust this based on your need */
   overflow-y: auto;
   /* border: 2px solid #673ab7; */
   border-radius: 10px;
@@ -884,7 +912,8 @@ padding-right: 4rem;
 
 /* Scrollbar styling for WebKit browsers (Chrome, Safari, etc.) */
 .department-list::-webkit-scrollbar {
-  width: 10px; /* Width of the scrollbar */
+  width: 10px; 
+  height: 10px;/* Width of the scrollbar */
 }
 
 .department-list::-webkit-scrollbar-track {
@@ -896,17 +925,18 @@ padding-right: 4rem;
   background-color: #e91e63; /* Pink thumb color */
   border-radius: 10px; /* Rounded thumb */
   border: 2px solid #422e8e; /* Border around the thumb */
-  height: 20px;
+  height: 5px;
 }
 
 /* For Firefox */
 .department-list {
   scrollbar-width: thin;
-  scrollbar-color: #e91e63 #422e8e; /* thumb color #e91e63, track color #422e8e */
+  scrollbar-color: #e91e63 #422e8e;
+   /* thumb color #e91e63, track color #422e8e */
 }
 /* Container for the doctor card */
 .doctor-card {
-  width: 390px;
+  width: 280px;
   height: 376px;
   padding: 20px;
   border: 2px solid #00bcd4;
