--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -176,6 +176,7 @@ text-align: center;
     }
     .address-info{
         width: 17%;
+        left: 965px;
     }
   }
   @media only screen and (max-width:1030px){
