--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -329,6 +329,10 @@
   width: 100%;
   height: 100%;
 }
+.left-image-2{
+  width: 468px;
+  height: 566px;
+}
 .text-content {
   flex: 1;
 }
@@ -466,7 +470,7 @@
   padding: 40px;
   background-color: #f0f8ff;
   text-align: center;
-  padding-left: 9rem;
+  padding-left: 7rem;
   padding-right: 3rem;
 
 }
@@ -781,6 +785,7 @@ font-size: 64px;
   transform: translateX(-50%);
   display: flex;
   gap: 10px;
+  z-index: 2;
 }
 
 .carousel-pagination span {
@@ -792,7 +797,7 @@ font-size: 64px;
 }
 
 .carousel-pagination span.active {
-  background-color: #4a90e2;
+  background-color: #0f96b4;
 }
 
 .doctor-container {
@@ -912,8 +917,9 @@ padding-right: 4rem;
 
 /* Scrollbar styling for WebKit browsers (Chrome, Safari, etc.) */
 .department-list::-webkit-scrollbar {
-  width: 10px; 
+  width: 4px; 
   height: 10px;/* Width of the scrollbar */
+  border-radius: 10px;
 }
 
 .department-list::-webkit-scrollbar-track {
@@ -923,9 +929,9 @@ padding-right: 4rem;
 
 .department-list::-webkit-scrollbar-thumb {
   background-color: #e91e63; /* Pink thumb color */
-  border-radius: 10px; /* Rounded thumb */
+  border-radius: 100px; /* Rounded thumb */
   border: 2px solid #422e8e; /* Border around the thumb */
-  height: 5px;
+  height: 2px;
 }
 
 /* For Firefox */
@@ -939,7 +945,7 @@ padding-right: 4rem;
   width: 314px;
   height: 376px;
   padding: 20px;
-  border: 2px solid #00bcd4;
+  border: 2px solid #0f96b4;
   border-radius: 10px;
   background-color: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -957,8 +963,8 @@ padding-right: 4rem;
     /* margin-left: -25px;*/
 
   border-top: 0px solid black;
-  border-bottom: 2px solid #00bcd4;
-  border-left: 2px solid #00bcd4;
+  border-bottom: 2px solid #0f96b4;
+  border-left: 2px solid #0f96b4;
   border-right: 0px solid #000;
   transform: rotate(45deg);
   margin-top: -25px;
@@ -1036,7 +1042,11 @@ color: #322875;
 /* Responsive styling */
 
 /* Responsive Design */
-
+@media screen and (max-width:1360px){
+  .departments-section{
+    padding-left: 6rem;
+  }
+}
 @media screen and (max-width: 1030px) {
   .facilities-container {
     /* display: grid;
@@ -1057,6 +1067,9 @@ color: #322875;
     height: 58px;
   }
   .left-image-1 {
+   width:100%;
+  height: 70%;  }
+  .left-image-2{
     width: 80%;
     height: 80%;
   }
@@ -1162,6 +1175,11 @@ color: #322875;
       width: 100%;
       padding: 10px;
       overflow-x: auto; /* Enable horizontal scrolling */
+    }
+    .departments-section{
+      padding-left: 3rem;
+      padding-right: 0rem;
+  
     }
     
     /* Hide scrollbar but keep functionality */
@@ -1316,6 +1334,18 @@ color: #322875;
     width: 100%;
     justify-content: center;
     align-items: center;
+    padding-left: 1rem;
+  }
+  .left-image-1{
+    width: 80%;
+    height: 80%;
+  }
+
+  .image-container-2{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-right: 1rem;
   }
   .text-content {
     text-align: left;
@@ -1667,6 +1697,10 @@ color: #322875;
     text-align: left;
   }
   .left-image-1 {
+    width: 100%;
+    height: 94%;
+  }
+  .left-image-2{
     width: 100%;
     height: 94%;
   }
