--- a/src/app/doctor-details/doctor-details.component.css
+++ b/src/app/doctor-details/doctor-details.component.css
@@ -86,7 +86,7 @@ color: #000;
     margin-bottom: 10px;
   }
   
-  .expertise-list {
+  /* .expertise-list {
     columns: 2;
     font-size: 18px;
 line-height: 30px;
@@ -100,12 +100,39 @@ font-family: 'Open Sans';
   .expertise-list li {
     margin-bottom: 5px;
     list-style-type: disc;
+  } */
+  .single-column {
+    columns: 1;
+    font-size: 18px;
+    line-height: 30px;
+    font-family: 'Open Sans';
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    padding-left: 40px;
   }
   
+  /* Two column layout for larger screens */
+  .two-columns {
+    columns: 2;
+    font-size: 18px;
+    line-height: 30px;
+    font-family: 'Open Sans';
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    padding-left: 40px;
+  }
+  
+li {
+    margin-bottom: 5px;
+    list-style-type: disc;
+  }
   .about-doctor {
     /* background-color: #f9f9f9; */
     padding: 20px;
     border-radius: 10px;
+    padding-left: 0;
   }
   
   .about-doctor h3 {
@@ -177,7 +204,7 @@ color: #000;
       margin-top: 4rem;
       padding-left: 0;
     }
-    .expertise-list {
+    .two-columns,.single-column {
       columns: 1;
     }
     .doctor-details h1{
@@ -193,7 +220,7 @@ color: #000;
         font-size: 20px;
         text-align: left;
     }
-    .expertise-list{
+    li{
         font-size: 14px;
         text-align: left;
     }
