--- a/src/app/doctor-structure/doctor-structure.component.html
+++ b/src/app/doctor-structure/doctor-structure.component.html
@@ -7,8 +7,8 @@
       </div>
       <div class="profile-info">
         <div class="dr-bhoopal-ts">{{name}}</div>
-        <div>{{qualification}}</div>
-        <div>{{desgination}}</div>
+        <div class="quali">{{qualification}}</div>
+        <div class="desi">{{desgination}}</div>
       </div>
     </div>
     <div class="profile-details" *ngIf="showProfileDetails">
