--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="home-parent">
+<div class="home-parent"  [ngClass]="{'dropdown-open': isDropdownOpen}">
     <div class="logo-container">
         <img class="aksha-logo" src="../../assets/aksha-logo.png" alt="Aksha Hospital Logo">
     </div>
