--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -17,21 +17,22 @@
       </div>
     </div>
   
-    <div class="contact-right">
-     <div>
-      Leading the Way in Patient Care – Get in Touch!
-     </div>
-     <div>
-      <div>
-        080 26772555 / 26772878 
-      </div>
-      <div>
-        +91 72598 33311
-      </div>
-     </div>
-     <div>
-      <button></button>
-     </div>
+    <div class="contact-right contact-card">
+     
+        <h2 class="contact-heading">Leading the Way in Patient Care – Get in Touch!</h2>
+        <div class="contact-info">
+          <div class="phone-number">
+            <img src="../../assets/con-phn.svg" alt="Phone Icon" class="contact-icon" />
+            080 26772555 / 26772878
+          </div>
+          <div class="mobile-number">
+            <img src="../../assets/con-tele.svg" alt="Mobile Icon" class="contact-icon" />
+            +91 72598 33311
+          </div>
+        </div>
+        <button class="call-now-btn">Call Us Now</button>
+      
+      
     </div>
   </div>
   
