--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -79,7 +79,10 @@
   cursor: pointer;
   font-size: 16px;
 }
-
+.appointment a{
+  text-decoration: none;
+  color: #fff;
+}
 .appointment:hover {
   background-color: #0d7b96;
 }
