--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -57,7 +57,7 @@
         </ul>
     </div>
     <div class="appointment-container">
-        <button class="appointment">Book Appointment</button>
+        <button class="appointment"><a href="tel:080 26772555">Book Appointment</a></button>
     </div>
     <div class="menu-icon" (click)="toggleMenu()">
         <span></span>
