--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="home-parent"  [ngClass]="{'dropdown-open': isDropdownOpen}">
     <div class="logo-container">
-        <img class="aksha-logo" src="../../assets/aksha-logo.png" alt="Aksha Hospital Logo">
+      <a href="/"><img class="aksha-logo" src="../../assets/aksha-logo.png" alt="Aksha Hospital Logo"></a>
     </div>
     <div class="nav-container" [ngClass]="{'open': isMenuOpen}">
         <ul class="nav-list">
