home-page-error

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -96,7 +96,9 @@
       </div>
     </div>
     <div class="button">
-      <button class="about-us-btn" (click)="about()">About Us &#xbb;</button>
+      <button class="about-us-btn btn" (click)="about()"> <svg>
+        <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+      </svg>About Us &#xbb;</button>
     </div>
     <!-- About Us Button -->
   </div>
@@ -149,7 +151,9 @@
     
           <!-- Button -->
           <div class="see-more">
-            <button class="see-more-btn"(click)="navigateToDoctor(doctor.slug)">See More &raquo;</button>
+            <button class="see-more-btn"(click)="navigateToDoctor(doctor.slug)"><svg>
+              <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+            </svg>See More &raquo;</button>
           </div>
           
         </div>
@@ -193,7 +197,9 @@
   
   </div>
   <div class="button">
-    <button class="view-more-btn"(click)="viewMore(selectedDepartment)">View More <img style="padding-left: 20px;width: 11px;height: 9px;" src="../../assets/arrow.png"></button>
+    <button class="view-more-btn btn"(click)="viewMore(selectedDepartment)"><svg>
+      <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+    </svg>View More <img style="padding-left: 20px;width: 11px;height: 9px;" src="../../assets/arrow.png"></button>
   </div>
   
 </div>
