--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -188,45 +188,40 @@
 
   margin-top: 3rem;
 }
-
-/* Diagonal lines using before and after */
-.about-us-btn::before {
-  content: "";
-  position: absolute;
-  inset: 0 50px;
-  width: 100%;
-  height: 2px;
-  background: white;
-  border-left: 2px solid #fff;
-  border-right: 2px solid #fff;
-  transition: 1s;
-}
-.about-us-btn::after {
-  content: "";
-  position: absolute;
-  inset: 110px 0;
-  width: 100%;
-  height: 2px;
-  background: white;
-  border-left: 2px solid #fff;
-  border-right: 2px solid #fff;
-  transition: 1s;
+.btn{
+  background: linear-gradient(90deg, #332876, #0f96b4);
+  font-weight: 100;
+  
+  svg {
+    height: 58px;
+    left: 0;
+    position: absolute;
+    top: 0; 
+    width: 100%; 
+  }
+  
+  rect {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 8;
+    stroke-dasharray: 422, 0;
+    transition: all 0.35s linear;
+  }
 }
 
-.about-us-btn:hover {
-  border: 1px solid #fff;
+.btn:hover {
+  background:linear-gradient(90deg, #332876, #0f96b4);
+  /* font-weight: 900;
+  letter-spacing: 1px; */
+  
+  rect {
+    stroke-width: 10;
+    stroke-dasharray: 15, 310;
+    stroke-dashoffset: 48;
+    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+  }
 }
 
-/* Hover state */
-.about-us-btn:hover::after {
-  inset: 60px 0;
-  transform: skewX(15deg);
-}
-
-.about-us-btn:hover::before {
-  inset: 0 60px;
-  transform: skewX(80deg);
-}
 
 /* Right side - Experience and image grid */
 .right-content {
@@ -590,7 +585,7 @@ text-align: justify;
 position: relative;
 bottom: 105px;
 font-family: 'Open Sans';
-height: 50px;
+height: 58px;
 }
 .icon-carousel-container {
   display: flex;
@@ -888,18 +883,59 @@ color: #000;
 }
 
 .see-more-btn {
-  padding: 10px 20px;
-  background-color: #0066cc;
+  position: relative;
+  display: inline-block;
+  box-shadow: 3px 4px 15px rgba(63, 176, 206, 0.65);
+  background: linear-gradient(90deg, #332876, #0f96b4);
   color: white;
   border: none;
+  padding: 11px 40px;
+  font-size: 16px;
+  font-weight: 500;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
+  overflow: hidden; /* Ensures the diagonal lines are contained within the button */
+  transition: 0.3s ease;
+
+}
+.see-more-btn{
+  background: linear-gradient(90deg, #332876, #0f96b4);
+  font-weight: 100;
+  
+  svg {
+    height: 38px;
+    left: 0;
+    position: absolute;
+    top: 0; 
+    width: 100%; 
+  }
+  
+  rect {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 3;
+    stroke-dasharray: 422, 0;
+    transition: all 0.35s linear;
+  }
 }
 
 .see-more-btn:hover {
-  background-color: #004c99;
+  background:linear-gradient(90deg, #332876, #0f96b4);
+  /* font-weight: 900;
+  letter-spacing: 1px; */
+  
+  rect {
+    stroke-width: 6;
+    stroke-dasharray: 15, 310;
+    stroke-dashoffset: 48;
+    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+  }
 }
+
+/* 
+.see-more-btn:hover {
+  background-color: #004c99;
+} */
 
 
 /* Container for the department list */
